--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "bootstrap": "^4.3.1",
+    "buffer": "^5.2.1",
     "core-js": "^2.5.4",
+    "events": "^3.0.0",
     "jquery": "^3.4.1",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
+    "stream": "0.0.2",
+    "timers": "^0.1.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
@@ -32,9 +37,11 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@types/bootstrap": "^4.3.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.30",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
